--- a/工作细胞.md
+++ b/工作细胞.md
@@ -4,7 +4,8 @@
 
 在BiLIbili萌上一部新番,挺有意思的
 
+[image](https://i0.hdslb.com/bfs/bangumi/f5d5f51b941c01f8b90b361b412dc75ecc2608d3.png@450w_600h.webp)
 
 [工作细胞](https://www.bilibili.com/bangumi/media/md102392/?spm_id_from=666.10.bangumi_detail.2)
 
-你努力的样子让我相爱自己
+### 你努力的样子让我想爱自己
